[package]
name = "stopwords"
description = "Stopwords from popular text processing frameworks."
version = "0.1.1"
authors = ["Alexey Suslov <alexey.suslov@gmail.com>"]
license = "MIT"
repository = "https://github.com/loony-bean/stopwords-rs"
keywords = ["nlp", "language", "stopwords"]
edition = "2018"

[badges]
travis-ci = { repository = "loony-bean/stopwords-rs", branch = "master" }

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0"
